Fixed col break on firefox zoom out

--- a/app/stylesheets/mediafeed/_css/mediafeed.scss
+++ b/app/stylesheets/mediafeed/_css/mediafeed.scss
@@ -438,7 +438,7 @@ em, i{
 		.hp_promo {
 			width: 286px;
 			float: left;
-			margin: 15px 10px 15px 0;
+			margin: 15px 10px 15px -1px;
 			border: 1px solid #ddd;
 			padding: 15px;
 			&.last {
